after compiting hero section

--- a/index.html
+++ b/index.html
@@ -18,9 +18,19 @@
                 <a href="#">Work with me</a> <!--Attributes-->
             </div>  
 
+
         </div>
 
-        <div class="hero">  </div>
+        <div class="hero">  
+
+        <div class="content">
+            <h1>Visual messages are<br> stronger than words.<br> Let me help you.</h1>
+
+        </div>
+        <div class="image">
+        <img src="https://render.fineartamerica.com/images/rendered/default/flat/pouch/images-medium-5/80-imperial-blue-butterfly-amy-kirkpatrick.jpg?&targetx=148&targety=-3&imagewidth=472&imageheight=474&modelwidth=777&modelheight=474&backgroundcolor=ffffff&orientation=0&producttype=pouch-regularbottom-medium"/>
+        </div>
+        </div>
 
 
     </section>
